Basic Functionality of choosing the grid size by the user

--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
   <div id="container">
     
   </div>
+
+  <button id="clear">Clear</button>
+  <input type="text" id="gridSize" placeholder="Enter a number up to 64">
+  <button id="setGridSize">Submit</button>
 </body>
 </html>
